--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Hi there!
+title: Hard to Find Stuff
 subtitle: This is where I give away things that are hard to get any other way. I put a but of work into this. If you'd like to throw $5 my way, click the "Buy me a coffee" button at the top of the page. Thanks!
 ---
